fix: align rtl title in new style notification

New style notifications do not use a BoundedLabel for their title, which
renders RTL content right-aligned. Changed the aligment of the title
Label to gfx::ALIGN_TO_HEAD so that the behaviour is the same for title
and message.

Bug: 914437
Change-Id: I99a316c6166385aa4f58b52da7cf7a15a6d5d2a9
Reviewed-on: https://chromium-review.googlesource.com/c/1375734
Reviewed-by: Peter Beverloo <peter@chromium.org>
Commit-Queue: Richard Knoll <knollr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616636}
Former-commit-id: 685bcc0c2b065d1a51be73a2dac609e4265eea19